k8s/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: seisoai
  labels:
    name: seisoai
    environment: production
